css/style.css
/*#region css reset*****/
body {
  font-family: "Montserrat", sans-serif;
  background-color: var(--bg-color);
  color: white;
  overflow: hidden;
}

img {
  width: 100%;
  height: 100%;
}

a {
  text-decoration: none;
  color: var(--text-low-contrast);
  font-weight: 600;
}
a:hover {
  color: var(--text-high-contrast);
}

/*#region scrollbar*****/
/* Firefox */
* {
  scrollbar-width: thin;
  scrollbar-color: #171717 #ffffff00;
}

/* Chrome, Edge, and Safari */
*::-webkit-scrollbar {
  width: 5px;
}

*::-webkit-scrollbar-thumb {
  background-color: #000000;
  border-radius: 10px;
  border: 3px solid #ffffff00;
}

/*#endregion scrollbar*****/

/*#endregion css reset*****/

:root {
  --brand-color: #adff2f;
  --control-color: #282828;
  --aside-color: #000;
  --bg-color: #141922;
  --aside-width: 200px;
  --text-low-contrast: #a3a3a3;
  --text-high-contrast: #ffffff;
  --footer-height: 85px;
}

/*#region Reusable components*****/

/*#region Section*****/
section {
  margin-top: 2rem;
  display: flex;
  flex-direction: column;
}

.section-title {
  font-size: 1.5rem;
  font-weight: 700;
  margin-bottom: 1.5rem;
  order: -1;
}

.section-comment ~ .section-title {
  margin-bottom: 0.8rem;
}

.section-comment {
  font-size: 0.8rem;
  font-weight: 600;
  color: var(--text-low-contrast);
  padding-bottom: 2.5rem;
}
/*#endregion Section*****/

/*#region Article*****/

article {
  display: flex;
  flex-direction: column;
  text-align: center;
  text-transform: capitalize;
  margin: 10px;
  width: calc(100% / 6 - 10px);
  max-width: 200px;
}

.article-title {
  padding-top: 0.5rem;
  font-weight: bold;
  flex-shrink: 0;
}

.article-artist {
  font-weight: bold;
  font-size: 0.8rem;
  color: var(--text-low-contrast);
  padding-top: 0.5rem;
  flex-shrink: 0;
}

.article-img.circle > img {
  border-radius: 50%;
}
/*#endregion Article*****/

/*#endregion Reusable components*****/

.container-fluid {
  height: 100vh;
  display: flex;
  flex-direction: column;
}

.container-fluid > div {
  height: 100%;
}

.content-container {
  height: calc(100vh - var(--footer-height));
  background: rgba(20, 25, 34, 1);
  background: linear-gradient(130deg, rgb(119, 119, 119) -200%, rgba(20, 25, 34, 1) 100%);
  overflow-y: auto;
}

/*#region header*****/
header {
  height: 70px;
  width: calc(100% - var(--aside-width));
  background-color: rgba(0, 0, 0, 0.548);
  position: fixed;
  z-index: 1;
  padding: 15px 50px;
}

button {
  color: var(--text-high-contrast);
  background-color: transparent;
  padding: 5px 40px;
  border: 2px solid var(--text-high-contrast);
  border-radius: 50px;
  text-transform: uppercase;
  word-spacing: 4px;
  cursor: pointer;
}

header button {
  width: max-content;
  padding: 0 10px;
}
button:hover {
  transform: scale(1.05);
}

button:active {
  transform: scale(0.95);
}
/*#endregion header*****/

/*#region main*****/
main {
  padding: 2rem;
  padding-top: 10vh;
  width: 100%;
}

nav {
  width: 100%;
  text-transform: uppercase;
  font-size: 0.8rem;
  font-weight: bold;
  color: var(--text-low-contrast);
}

ul {
  justify-content: center;
}

main .reproduction, 
main .article-img:hover{
  position: relative;
}

main .article-img:not(.reproduction)::before,
main .reproduction::before {
  font-family: "Font Awesome 6 Free";
  font-weight: normal;
  font-size: 100px;
  line-height: 140px;
  color: white;
  content: "";
  background-image: url(../img/circle-play-regular.png);
  background-size: 40%;
  background-repeat: no-repeat;
  background-position: center;
  position: absolute;
  display: inline-block;
  width: 100%;
  height: 100%;
  background-color: black;
  visibility: hidden;
  opacity: 0;
  transition: opacity 0.2s ease-in-out;
}

main .reproduction::before {
  visibility: visible;
  opacity: 0.7;
}


main .article-img:hover::before {
  visibility: visible;
  opacity: 0.7;
}

main .article-img.circle {
  transition: transform 0s ease-in;
}

main .article-img.circle:hover {
  transform: rotate(20turn);
  transition: transform 30s ease-in;
}

main .article-img.circle:hover::before {
  border-radius: 50%;
}

main .marked {
  color: var(--text-high-contrast);
  font-weight: bold;
  order: -1;
}
main .marked::after {
  display: block;
  position: relative;
  margin-top: 0.5rem;
  content: "";
  width: 50%;
  height: 3px;
  transform: translateX(50%);
  background-color: var(--brand-color);
}
main a:active::after {
  display: block;
  position: relative;
  margin-top: 0.5rem;
  content: "";
  width: 50%;
  height: 3px;
  transform: translateX(50%);
  background-color: var(--brand-color);
}
main a:active ~ .marked::after {
  display: none;
}
main a:active ~ .marked {
  color: var(--text-low-contrast);
}
/*#endregion main*****/

/*#region aside*****/
aside {
  flex-shrink: 0;
  width: var(--aside-width);
  height: calc(100% - var(--footer-height));
  background-color: var(--aside-color);
  color: var(--text-low-contrast);
  padding-top: 1rem;
  padding-right: 2rem;
  padding-bottom: 0.5rem;
  font-weight: 700;
  font-size: 0.8rem;
}
aside li:not(.marked),
.aside-profile {
  padding-left: 1rem;
}
.aside-logo {
  margin-bottom: 2rem;
}

aside .marked {
  padding-left: calc(1rem - 3px);
  border-left: 3px solid var(--brand-color);
}

aside .marked a {
  color: var(--text-high-contrast);
}
aside .marked svg {
  fill: var(--text-high-contrast);
}

aside li a {
  margin: 1rem 0;
  display: flex;
  align-items: center;
}
aside li:hover svg {
  fill: var(--text-high-contrast);
}

aside svg {
  width: 1.5rem;
  margin-right: 1ch;
  fill: var(--text-low-contrast);
}

aside h3 {
  padding-left: 1rem;
  font-weight: 700;
  color: var(--text-high-contrast);
}

.add-playlist {
  width: 1.5rem;
  height: 1.5rem;
  color: black;
  font-size: 2rem;
  line-height: 1.5rem;
  text-align: center;
  margin-right: 0.5rem;
  background-color: var(--text-low-contrast);
}

aside li:hover .add-playlist {
  background-color: var(--text-high-contrast);
}

.aside-profile {
  row-gap: 0.5rem;
}

.aside-profile img {
  width: 1.3rem;
  height: 1.2rem;
}
.profile-img {
  padding-top: 0.5rem;
}
.profile-img img {
  background-color: grey;
  border-radius: 50%;
}

/*#endregion aside*****/

/*#region footer*****/
footer {
  position: fixed;
  width: 100%;
  height: var(--footer-height);
  z-index: 2;
  bottom: 0;
  background-color: var(--control-color);
}
footer button {
  border: none;
  padding: 0.5rem;
}
article {
  font-size: 0.7rem;
  column-gap: 10px;
  min-width: 100px;
}

.likes {
  display: flex;
  align-items: flex-start;
  align-self: center;
  justify-content: flex-start;
}
footer article .article-img {
  --image-size: 60px;
  flex-shrink: 0;
  flex-grow: 1;
  width: var(--image-size);
}
footer article .article-title {
  font-size: 0.8rem;
}
footer article .article-content {
  flex-grow: 1;
  width: 100%;
}

.play-controls-button {
  position: absolute;
  top: 0;
  margin: 0 auto;
}
.play-controls-button i {
  font-size: 1rem;
}
.play-controls-button button {
  margin-left: 0.5rem;
}

.play-controls {
  align-items: flex-end;
  justify-content: center;
  margin-top: 2rem;
}

.volume-controls > div button i{
  font-size: 0.8rem;
}


.fa-play::before {
  --play-size: 10px;

  display: inline-block;
  width: var(--play-size);
  height: var(--play-size);
  border: 3px solid var(--text-high-contrast);
  text-align: center;
  line-height: var(--play-size);
  padding: 0.5rem 0.5rem;
  border-radius: 50%;
}

#player {
  width: 100%;
}
footer label {
  font-size: 0.7rem;
  color: var(--text-low-contrast);
  margin: 0.5rem;
}
.slider {
  max-width: 100%;
  min-width: 50%;
}

#volume {
  margin: 10px 0;
  width: 90%;
}

.volume-wrap {
  max-width: 100%;
  min-width: 50%;
}

/*#region range style*****/
input[type="range"] {
  -webkit-appearance: none;
  width: 200px;
  height: 5px;
  background: rgba(255, 255, 255, 0.6);
  border-radius: 5px;
  background-image: linear-gradient(var(--text-high-contrast), var(--text-high-contrast));
  background-size: 70% 100%;
  background-repeat: no-repeat;
  cursor: pointer;
}
input[type="range"]:hover {
  background-image: linear-gradient(var(--brand-color), var(--brand-color));
}
/* Input Thumb */
input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none;
  height: 20px;
  width: 20px;
  border-radius: 50%;
  opacity: 0;
  background: #ffffff;
  cursor: e-resize;
  transition: opacity 0.1s ease-in-out;
}

input[type="range"]::-moz-range-thumb {
  -webkit-appearance: none;
  height: 20px;
  width: 20px;
  border-radius: 50%;
  opacity: 0;
  background: #ffffff;
  cursor: e-resize;
  transition: opacity 0.1s ease-in-out;
}

input[type="range"]::-webkit-slider-thumb:hover {
  opacity: 1;
}

input[type="range"]::-moz-range-thumb:hover {
  opacity: 1;
}

input[type="range"]:hover::-moz-range-thumb {
  opacity: 1;
}

input[type="range"]:hover::-webkit-slider-thumb {
  opacity: 1;
}

/* Input Track */
input[type="range"]::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  box-shadow: none;
  border: none;
  background: transparent;
}

input[type="range"]::-moz-range-track {
  -webkit-appearance: none;
  box-shadow: none;
  border: none;
  background: transparent;
}
/*#endregion range style*****/

/*#endregion footer*****/

@media screen {
  @media (max-width: 992px) {
    article {
      margin: 10px;
      width: calc(100% / 4 - 20px);
    }
    .article-wrap {
      flex-wrap: wrap;
      justify-content: flex-start;
    }
  }
  @media (max-width: 768px) {
    article {
      margin: 5px;
      width: calc(100% / 2 - 10px);
    }
    .article-wrap {
      flex-wrap: wrap;
      justify-content: flex-start;
    }
    .likes {
      flex-direction: column;
    }
  }

  @media (max-width: 576px) {
    :root {
      --aside-width: 50px;
    }
    .aside-logo {
      margin-bottom: 0;
    }

    aside {
      padding: 0.6rem;
    }
    li {
      padding: 0rem;
    }
    aside li:not(.marked),
    .aside-profile {
      padding-left: 0;
    }
    aside svg {
      width: 100%;
      margin: 0;
    }
    aside .marked {
      border-left: 0;
      padding: 0;
    }

    .profile-img,
    .profile-install {
      justify-content: center;
    }
    .aside-profile img {
      width: 1.6rem;
      height: 1.6rem;
    }

    footer article {
      column-gap: 0;
      margin: 10px;
      width: calc(100% / 2 - 20px);
      min-width: min-content;
    }
    footer article .article-content {
      margin-left: 5px;
    }
    .play-controls-button button {
      padding-right: 0.5rem;
    }

    /*#region EXTRA QUERY NON DELL'ESERCIZIO*****/

    @media (max-width: 480px) {
      main {
        padding: 0;
        padding-top: 60px;
      }
      footer .volume-controls {
        display: none;
      }
      article {
        margin: 10px;
        width: calc(100% / 2 - 20px);
        min-width: min-content;
      }
      .in-play {
        width: 10%;
      }
      .likes {
      }

      footer > div {
        margin-top: -12px;
      }

      footer .in-play img {
        width: 50px;
      }
      footer .play-controls {
        flex-direction: column;
        width: 60%;
        margin-top: 0;
      }
      footer .play-controls-button {
        position: static;
        flex-wrap: wrap;
      }
      footer .slider {
        position: absolute;
        bottom: -5px;
      }
    }
    @media (max-width: 343px) {
      header {
        padding: 20px 16px;
      }
      main {
        padding: 0;
        padding-top: 60px;
      }
      footer article {
        column-gap: 0;
        margin: 10px;
        width: calc(100% / 2 - 20px);
        min-width: min-content;
      }

      footer .play-controls-button {
        margin: 0;
        flex-wrap: nowrap;
      }
      footer .play-controls-button .fa-random,
      footer .play-controls-button .fa-arrow-rotate-right {
        display: none;
      }
    }
    /*#endregion EXTRA QUERY NON DELL'ESERCIZIO*****/
  }
}

